package com.daniel.Dispensa.Model;

public enum Unidade {
    UNIDADE,
    QUILO,
    LITRO,
    PACOTE,
    GRAMA,
    MILILIRO
}
